App builder 1.6 integration bug fixes (#9456)
* Fix max canvas width select broken

* Added padding right instead of setting width to avoid overlapping of numbers on the arrow

Added padding right to provide spacing to right side of number container

* fix : focusing on any cell of number column type, results into first cell getting focused

* fix : text alignment bug in string column type

* fixed : text alignmnet of editable div in string column type

* Fix : avoid clicking thrice on element to start editing the content

* Fix : Overlay issue in deprecated columns

* Fix : multiselect deprecated secondary text not appearing on column list

* Fix table fixes

* fix placeholder in multiselect dynamic options

* fix: fix for scrollbar in viewer

* fix: integration bugfixes for table (#9457)

* change label for link color

* remove alt text for cell image

* fix : number arrow , labels

* limit table popover max height

* Bug fixes from appbuilder-1.6 (#9465)

* Fix : Selecting same value again is not discarding the selected value in single select

* If default options list is empty then return null

* Fix : Deleting the default option will rresult into removing from default option list as well

* showing error message at the bottom and cell value in the center for text and string column type

* Making Pagination aligned in the center horizontally

* Fix: Download popup

* Fix add new row string text not changing its color in dark mode

* Fix date picker on change in add new row not changing when value is empty

* fix : table default ui (#9454)

* fix : muliselect popover not showing (#9455)

* update default number data from string to number (#9467)

* Fix in datepicker

* fix: add fixed height to error feedback

* fix: fixed issue that caused multiselect option delete to fail (#9469)

* fix: fixed issue that caused multiselect option delete to fail

* refactor: minor code cleanup

* Bug Fixes from a

--- a/frontend/src/Editor/Components/Table/datepicker.scss
+++ b/frontend/src/Editor/Components/Table/datepicker.scss
@@ -246,7 +246,7 @@ input[type="time"]::-webkit-calendar-picker-indicator {
     line-height: 20px;
 }
 
-select {
+.tj-datepicker-widget-month-selector, .tj-datepicker-widget-year-selector {
     appearance: none;
     -moz-appearance: none;
     -webkit-appearance: none;
