--- a/frontend/src/_styles/table-component.scss
+++ b/frontend/src/_styles/table-component.scss
@@ -126,10 +126,20 @@
     overflow-x: initial;
     padding: 8px 12px !important;
     overflow-y: hidden;
-    &.has-number{
+
+    &.has-number {
+      padding: 0px 12px 0px 12px !important;
+    }
+    &.has-number.isEditable{
       padding: 0px 0px 0px 12px !important;
     }
 
+    &.has-dropdown,
+    &.has-multiselect,
+    &.has-badge,
+    &.has-badges {
+      overflow-y: visible !important;
+    }
 
     // &.has-number {
     //   padding: 0 !important;
@@ -199,11 +209,11 @@
       height: 100%;
     }
 
-    
+
     &:not(:focus-within):hover {
       background: linear-gradient(0deg, var(--interactive-overlays-fill-hover), var(--interactive-overlays-fill-hover)),
     }
-    
+
 
     display: flex !important;
 
@@ -289,9 +299,10 @@
 }
 
 .jet-data-table>table:not(.table-resizing) {
+
   .table-row:hover,
   .table-row:focus {
-    background: var(--slate4, #ECEEF0) !important;   
+    background: var(--slate4, #ECEEF0) !important;
   }
 }
 
@@ -425,28 +436,31 @@
       width: 30px;
       cursor: ew-resize !important;
       border: 0 !important; // overriding the border added in theme.scss
+
       .table-column-resize-handle {
         display: none;
         width: 10px;
         height: 100%;
         transform: translateX(50%);
+
         &::after {
-            content: '';
-            display: block;
-            height: 10px;
-            width: 4px;
-            background: var(--interactive-overlay-column-resize);
-            top: 11px;
-            position: absolute;
-            left: 3px;
-            border-radius: 10px;
+          content: '';
+          display: block;
+          height: 10px;
+          width: 4px;
+          background: var(--interactive-overlay-column-resize);
+          top: 11px;
+          position: absolute;
+          left: 3px;
+          border-radius: 10px;
         }
       }
+
       &:hover {
-          .table-column-resize-handle {
-            display: block !important;
-          }
+        .table-column-resize-handle {
+          display: block !important;
         }
+      }
     }
 
     &:last-child {
@@ -518,21 +532,26 @@
 
   .table-download-option {
     display: flex;
-    padding: 10px 14px !important;
-    align-items: center;
-    gap: 37px;
+    flex-direction: column;
     flex: 1 0 0;
     border-radius: 6px;
+    span{
+      display: flex;
+      padding: 10px 14px !important;
+      align-items: center;
+      gap: 37px;
+      flex: 1 0 0;
+      border-radius: 6px;
 
-    &:hover {
-      background-color: var(--slate3, #F1F3F5) !important;
+      &:hover {
+        background-color: var(--slate3, #F1F3F5) !important;
+      }
+  
+      &:focus-visible {
+        background: var(--slate1, #FBFCFD) !important;
+        box-shadow: 0px 0px 0px 4px var(--slate6) !important;
+      }
     }
-
-    &:focus-visible {
-      background: var(--slate1, #FBFCFD) !important;
-      box-shadow: 0px 0px 0px 4px var(--slate6) !important;
-    }
-
   }
 }
 
@@ -642,7 +661,7 @@
       text-transform: capitalize;
 
       &:hover {
-        
+
         background: linear-gradient(0deg, var(--surfaces-surface-02), var(--surfaces-surface-02)), linear-gradient(0deg, var(--interactive-overlays-fill-hover), var(--interactive-overlays-fill-hover)) !important;
       }
 
@@ -708,13 +727,14 @@
     }
   }
 
-  .warning-no-data-text{
+  .warning-no-data-text {
     color: var(--slate11) !important;
     /* Paragraph/Small/Medium */
     font-size: 14px;
     font-style: normal;
     font-weight: 500;
-    line-height: 20px; /* 142.857% */
+    line-height: 20px;
+    /* 142.857% */
   }
 
 
@@ -724,10 +744,12 @@
   background-color: var(--slate2);
   --tblr-table-accent-bg: var(--slate2);
 }
-.table-striped>tbody>tr:nth-of-type(even):hover{
-  background-color: var(--interactive-overlays-fill-hover) ;
+
+.table-striped>tbody>tr:nth-of-type(even):hover {
+  background-color: var(--interactive-overlays-fill-hover);
   --tblr-table-accent-bg: var(--interactive-overlays-fill-hover);
 }
+
 .resizing-column {
   border-right: 1px solid var(--interactive-overlay-border-pressed) !important;
 }
@@ -852,6 +874,10 @@
         background-color: var(--slate4);
       }
 
+      .invalid-feedback {
+        height: 22px ;
+      }
+
       &:has(.invalid-feedback):hover {
         border: 1px solid var(--tomato10);
 
@@ -888,8 +914,10 @@
 
       &.has-textarea {
         overflow: hidden;
+
         .table-column-type-div-element {
-          display: block;
+          display: flex;
+          height: 100%;
         }
       }
 
@@ -938,8 +966,9 @@
             display: flex;
             align-items: center;
           }
-          .react-select__value-container--is-multi{
-            flex-flow: wrap ;
+
+          .react-select__value-container--is-multi {
+            flex-flow: wrap;
             gap: 6px;
             max-height: 100%;
           }
@@ -1007,7 +1036,8 @@
 .table-column-popover#popover-basic-2 {
   z-index: 9999 !important;
   min-width: 280px;
-  max-height: 800px !important;
+  max-height: 85vh !important;
+
   .popover-body {
     display: flex;
     flex-direction: column;
@@ -1040,16 +1070,12 @@
 
     .table-column-date-picker-accordion {
 
-      .accordion-button,
-      .accordion-body {
-        // padding-left:  0 !important;
-        // padding-right: 0 !important;
-        // padding-top: 0 !important
+      .accordion-button {
+        .accordion-title-text {
+          text-transform: none !important
+        }
       }
 
-      // .accordion-header {
-      //   padding: 16px
-      // }
       .grey-bg-section {
         // background-color: var(--slate3);
         // padding: 12px 16px;
@@ -1092,8 +1118,9 @@
 }
 
 .table-select-column-accordian {
-    padding: 0px 16px 0px;
-    margin-top: -24px;
+  padding: 0px 16px 0px;
+  margin-top: -24px;
+
   .accordion-button {
     padding: 16px 0px !important;
   }
@@ -1102,7 +1129,7 @@
     padding: 0 !important;
   }
 
-  .accordion-item{
+  .accordion-item {
     border-width: 0px 0px 0px 0px !important;
     border: solid var(--slate5);
   }
@@ -1242,6 +1269,7 @@
 .table-radio-column-cell {
   overflow: hidden;
   margin-top: 10px;
+
   div {
     height: 100%;
     display: flex;
@@ -1267,7 +1295,8 @@
 }
 
 .overlay-radio-table {
-  margin-top: 10px;
+
+  // margin-top: 10px;
   span {
     font-family: 'IBM Plex Sans';
     line-height: 20px;
@@ -1296,7 +1325,7 @@
     overflow-y: auto;
     /* Enable vertical scrolling */
     position: absolute;
-    padding:  0.75rem !important;
+    padding: 0.75rem !important;
     outline: none !important;
     border: 1px solid var(--interactive-overlays-focus-outline) !important;
     background-color: var(--surfaces-surface-01) !important;
@@ -1389,14 +1418,27 @@
   }
 }
 
-.is-invalid.content-editing ~ .invalid-feedback {
-  padding: 0px 12px 8px;;
+.is-invalid.content-editing~.invalid-feedback {
+  padding: 0px 12px 8px;
+  ;
 }
 
-.table.table-striped > :not(caption) > * > * {
-  border-bottom: 0; /* Remove border bottom if .table-striped class is present */
+.table.table-striped> :not(caption)>*>* {
+  border-bottom: 0;
+  /* Remove border bottom if .table-striped class is present */
 }
 
-.th:has(.resizer:hover){
-  border-right: 1px solid var(--interactive-overlay-border-pressed) !important; 
+.th:has(.resizer:hover) {
+  border-right: 1px solid var(--interactive-overlay-border-pressed) !important;
+}
+
+.arror-container {
+  position: absolute;
+  right: 0px;
+}
+
+.table-add-new-row {
+  .long-text-input {
+    max-height: max-content !important;
+  }
 }
